fix expandable row not showing leaderboards on /builds page

--- a/src/components/AchievementsBadge/style.scss
+++ b/src/components/AchievementsBadge/style.scss
@@ -36,7 +36,10 @@
   &.achievement-900-badge,
   &.achievement-1000-badge,
   &.achievement-1100-badge,
-  &.achievement-1200-badge {
+  &.achievement-1200-badge,
+  &.achievement-1300-badge,
+  &.achievement-1400-badge,
+  &.achievement-1500-badge {
     background-color: rgb(168, 120, 31);
     border-color: rgb(168, 120, 31);
   }
